--- a/250-chemistry01.html
+++ b/250-chemistry01.html
@@ -298,7 +298,7 @@
   <header>
     <span><i class="fas fa-flask"></i> CHEMISTRY — IPE GUIDE</span>
     <a href="chemistry-syllabus.html" class="header-btn">
-      <i class="fas fa-balance-scale"></i> GO FOR JEE|EAPCET GUIDE
+      <i class="fas fa-balance-scale"></i> GO FOR NEET|EAPCET GUIDE
     </a>
   </header>
 
@@ -450,7 +450,7 @@
     </table>
 
     <h2><i class="fas fa-trophy"></i> Competitive Exam Preparation</h2>
-    <p>Chemistry syllabus covers a major portion of EAMCET/JEE Main Chemistry. Focus on these key topics for competitive exams:</p>
+    <p>Chemistry syllabus covers a major portion of EAMCET/NEET Chemistry. Focus on these key topics for competitive exams:</p>
     <div class="exam-badges">
       <div class="exam-badge"><i class="fas fa-flask"></i> Physical Chemistry</div>
       <div class="exam-badge"><i class="fas fa-dna"></i> Organic Chemistry</div>
