--- a/251-BIPC-INDEX.html
+++ b/251-BIPC-INDEX.html
@@ -427,12 +427,12 @@
 
 
 <div class="grid">
-    <a href="#" class="box"><i class="fas fa-leaf"></i>Botany</a>
-    <a href="#" class="box"><i class="fas fa-paw"></i>Zoology</a>
-    <a href="#" class="box"><i class="fas fa-microscope"></i>Physics</a>
-    <a href="#" class="box"><i class="fas fa-vial"></i>Chemistry</a>
-    <a href="#" class="box"><i class="fas fa-language"></i>English</a>
-    <a href="#" class="box"><i class="fas fa-book"></i>Second Language</a>
+    <a href="255-botony -index.html" class="box"><i class="fas fa-leaf"></i>Botany</a>
+    <a href="255-ZOOLOGY-INDEX.HTML" class="box"><i class="fas fa-paw"></i>Zoology</a>
+    <a href="250-PHYSICS01.html" class="box"><i class="fas fa-microscope"></i>Physics</a>
+    <a href="250-chemistry01.html" class="box"><i class="fas fa-vial"></i>Chemistry</a>
+    <a href="250-ENGLISH.HTML" class="box"><i class="fas fa-language"></i>English</a>
+    <a href="255-SECOUND-LANGUAGE.HTML" class="box"><i class="fas fa-book"></i>Second Language</a>
     
 </div>
 
