--- a/255-ZOOLOGY-INDEX.HTML
+++ b/255-ZOOLOGY-INDEX.HTML
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Chemistry | MPC Stream Guide</title>
+  <title>Zoology | BiPC Stream Guide</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <style>
     :root {
-      --primary-blue: #1a237e;
+      --primary-green: #1b5e20;
       --accent-gold: #ffd600;
-      --bg-light: #f4f7fb;
+      --bg-light: #f4faf5;
       --white: #fff;
-      --gray: #e3e8ee;
+      --gray: #e3eee4;
       --text-dark: #1a202c;
       --text-light: #6b7280;
     }
@@ -23,14 +23,14 @@
       line-height: 1.7;
     }
     header {
-      background: var(--primary-blue);
+      background: var(--primary-green);
       color: var(--white);
       padding: 1.2rem 0;
       text-align: center;
       font-size: 2rem;
       font-weight: bold;
       letter-spacing: 1px;
-      box-shadow: 0 4px 10px rgba(26,35,126,0.13);
+      box-shadow: 0 4px 10px rgba(27,94,32,0.13);
       position: sticky;
       top: 0;
       z-index: 1000;
@@ -41,7 +41,7 @@
     }
     .header-btn {
       background: var(--accent-gold);
-      color: var(--primary-blue);
+      color: var(--primary-green);
       border: none;
       border-radius: 25px;
       padding: 0.5rem 1.3rem;
@@ -66,17 +66,17 @@
       background: var(--white);
       padding: 40px 30px;
       border-radius: 18px;
-      box-shadow: 0 6px 32px rgba(26,35,126,0.08);
+      box-shadow: 0 6px 32px rgba(27,94,32,0.08);
     }
     h1 {
-      color: var(--primary-blue);
+      color: var(--primary-green);
       text-align: center;
       margin-bottom: 18px;
       font-size: 2.1rem;
       font-weight: 700;
     }
     h2 {
-      color: var(--primary-blue);
+      color: var(--primary-green);
       margin-top: 38px;
       margin-bottom: 18px;
       font-size: 1.35rem;
@@ -93,7 +93,7 @@
       border-radius: 4px;
     }
     .section-card {
-      background: #f9fbfd;
+      background: #f9fdfa;
       border-radius: 16px;
       padding: 20px;
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
@@ -102,13 +102,13 @@
     .section-heading {
       font-size: 1.3rem;
       font-weight: 700;
-      color: var(--primary-blue);
+      color: var(--primary-green);
       display: flex;
       align-items: center;
       gap: 12px;
       margin-bottom: 20px;
       padding: 10px 16px;
-      background-color: #eaf2ff;
+      background-color: #e8f5e9;
       border-left: 6px solid var(--accent-gold);
       border-radius: 8px;
     }
@@ -121,7 +121,7 @@
       display: flex;
       align-items: center;
       gap: 10px;
-      background-color: var(--primary-blue);
+      background-color: var(--primary-green);
       color: white;
       padding: 12px 20px;
       border-radius: 10px;
@@ -135,7 +135,7 @@
       font-size: 18px;
     }
     .download-btn:hover {
-      background-color: #0d133d;
+      background-color: #0d310f;
     }
     .video-container {
       display: flex;
@@ -156,7 +156,7 @@
     }
     .video-card h4 {
       padding: 15px;
-      color: var(--primary-blue);
+      color: var(--primary-green);
       font-size: 1.1rem;
     }
     .video-frame {
@@ -172,7 +172,7 @@
       border-radius: 0 8px 8px 0;
     }
     .info-box h3 {
-      color: var(--primary-blue);
+      color: var(--primary-green);
       margin-top: 0;
     }
     .tips-container {
@@ -185,13 +185,13 @@
       display: flex;
       align-items: flex-start;
       gap: 15px;
-      background: #f4f7fb;
+      background: #f4faf5;
       border-radius: 10px;
       padding: 15px;
-      box-shadow: 0 2px 8px rgba(26,35,126,0.04);
+      box-shadow: 0 2px 8px rgba(27,94,32,0.04);
     }
     .tip-icon {
-      color: var(--primary-blue);
+      color: var(--primary-green);
       font-size: 1.7rem;
       margin-top: 2px;
     }
@@ -199,7 +199,7 @@
       width: 100%;
       border-collapse: collapse;
       margin: 25px 0 35px 0;
-      box-shadow: 0 2px 10px rgba(26,35,126,0.05);
+      box-shadow: 0 2px 10px rgba(27,94,32,0.05);
       background: var(--white);
       border-radius: 10px;
       overflow: hidden;
@@ -211,16 +211,16 @@
       font-size: 1rem;
     }
     th {
-      background: var(--primary-blue);
+      background: var(--primary-green);
       color: white;
       font-weight: 600;
       border-bottom: 2px solid var(--accent-gold);
     }
     tr:nth-child(even) {
-      background-color: #f5f9ff;
+      background-color: #f0f9f1;
     }
     tr:hover {
-      background-color: #e3e8ee;
+      background-color: #e3eee4;
     }
     .exam-badges {
       display: flex;
@@ -229,8 +229,8 @@
       margin-top: 20px;
     }
     .exam-badge {
-      background: #e3e8ee;
-      color: var(--primary-blue);
+      background: #e3eee4;
+      color: var(--primary-green);
       padding: 8px 15px;
       border-radius: 20px;
       font-weight: 600;
@@ -240,7 +240,7 @@
     }
     .exam-badge i {
       margin-right: 8px;
-      color: var(--primary-blue);
+      color: var(--primary-green);
     }
     .coming-soon {
       text-align: center;
@@ -249,7 +249,7 @@
       border-radius: 8px;
       margin-top: 20px;
       font-weight: 600;
-      color: var(--primary-blue);
+      color: var(--primary-green);
     }
     @media (max-width: 900px) {
       .container {
@@ -296,19 +296,19 @@
 </head>
 <body>
   <header>
-    <span><i class="fas fa-flask"></i> CHEMISTRY — IPE GUIDE</span>
-    <a href="chemistry-syllabus.html" class="header-btn">
-      <i class="fas fa-balance-scale"></i> GO FOR JEE|EAPCET GUIDE
+    <span><i class="fas fa-paw"></i> ZOOLOGY — IPE GUIDE</span>
+    <a href="zoology-syllabus.html" class="header-btn">
+      <i class="fas fa-heartbeat"></i> GO FOR NEET GUIDE
     </a>
   </header>
 
   <div class="container">
-    <h1>Chemistry Complete Study Guide</h1>
-    <p>Welcome to the comprehensive Chemistry resource for Intermediate Public Examination (IPE) students in Andhra Pradesh and Telangana. This guide covers both 1st and 2nd year syllabus with essential study materials, previous year papers, and expert tips to excel in your exams.</p>
+    <h1>Zoology Complete Study Guide</h1>
+    <p>Welcome to the comprehensive Zoology resource for Intermediate Public Examination (IPE) students in Andhra Pradesh and Telangana. This guide covers both 1st and 2nd year syllabus with essential study materials, previous year papers, and expert tips to excel in your exams.</p>
     
     <div class="info-box">
-      <h3>About Chemistry</h3>
-      <p>Chemistry is a core subject for MPC stream students, exploring the composition, structure, properties, and changes of matter. The syllabus includes Physical, Organic, and Inorganic Chemistry, providing a strong foundation for competitive exams like EAMCET and JEE.</p>
+      <h3>About Zoology</h3>
+      <p>Zoology is a core subject for BiPC stream students, exploring animal life, structure, physiology, behavior, and evolution. The syllabus includes Animal Diversity, Human Anatomy, Genetics, and Ecology, providing a strong foundation for medical and life science careers.</p>
     </div>
 
     <div class="section-card">
@@ -316,13 +316,13 @@
         <i class="fas fa-book"></i>
         <span>Study Resources for IPE 1st Year</span>
       </h2>
-      <p>Comprehensive materials covering all chapters of 1st year Chemistry syllabus as prescribed by the Board of Intermediate Education.</p>
+      <p>Comprehensive materials covering all chapters of 1st year Zoology syllabus as prescribed by the Board of Intermediate Education.</p>
       <div class="downloads-grid">
         <a href="#" class="download-btn"><i class="fas fa-book-open"></i> Textbook PDF (1st Year)</a>
         <a href="#" class="download-btn"><i class="fas fa-download"></i> Syllabus & Weightage</a>
         <a href="#" class="download-btn"><i class="fas fa-file-alt"></i> Previous Year Papers</a>
         <a href="#" class="download-btn"><i class="fas fa-star"></i> Important Questions</a>
-        <a href="#" class="download-btn"><i class="fas fa-vial"></i> Formula Handbook</a>
+        <a href="#" class="download-btn"><i class="fas fa-dna"></i> Diagrams Handbook</a>
         <a href="#" class="download-btn"><i class="fas fa-chart-line"></i> Exam Strategy Guide</a>
       </div>
     </div>
@@ -332,63 +332,63 @@
         <i class="fas fa-book"></i>
         <span>Study Resources for IPE 2nd Year</span>
       </h2>
-      <p>Complete collection of study materials for 2nd year Chemistry, including advanced topics in Organic and Inorganic Chemistry.</p>
+      <p>Complete collection of study materials for 2nd year Zoology, including advanced topics in Human Physiology and Genetics.</p>
       <div class="downloads-grid">
         <a href="#" class="download-btn"><i class="fas fa-book-open"></i> Textbook PDF (2nd Year)</a>
         <a href="#" class="download-btn"><i class="fas fa-download"></i> Syllabus & Weightage</a>
         <a href="#" class="download-btn"><i class="fas fa-file-alt"></i> Previous Year Papers</a>
         <a href="#" class="download-btn"><i class="fas fa-star"></i> Important Questions</a>
-        <a href="#" class="download-btn"><i class="fas fa-vial"></i> Formula Handbook</a>
+        <a href="#" class="download-btn"><i class="fas fa-dna"></i> Diagrams Handbook</a>
         <a href="#" class="download-btn"><i class="fas fa-chart-line"></i> Exam Strategy Guide</a>
       </div>
     </div>
 
-    <h2><i class="fas fa-video"></i> Chemistry Video Lectures</h2>
-    <p>Enhance your understanding with expert video lectures covering all topics in the Chemistry syllabus. These videos are specially designed for MPC stream students.</p>
+    <h2><i class="fas fa-video"></i> Zoology Video Lectures</h2>
+    <p>Enhance your understanding with expert video lectures covering all topics in the Zoology syllabus. These videos are specially designed for BiPC stream students.</p>
     
     <div class="video-container">
       <div class="video-card">
-        <h4><i class="fas fa-play-circle"></i> Chemical Bonding - Full Chapter</h4>
-        <iframe class="video-frame" src="https://www.youtube.com/embed/1TtGQnyPZ6g" title="Chemistry Chemical Bonding" allowfullscreen></iframe>
+        <h4><i class="fas fa-play-circle"></i> Animal Diversity - Full Chapter</h4>
+        <iframe class="video-frame" src="https://www.youtube.com/embed/1TtGQnyPZ6g" title="Zoology Animal Diversity" allowfullscreen></iframe>
       </div>
       <div class="video-card">
-        <h4><i class="fas fa-play-circle"></i> Organic Chemistry - Important Reactions</h4>
-        <iframe class="video-frame" src="https://www.youtube.com/embed/2kA4yQK4k2w" title="Chemistry Organic" allowfullscreen></iframe>
+        <h4><i class="fas fa-play-circle"></i> Human Anatomy - Important Concepts</h4>
+        <iframe class="video-frame" src="https://www.youtube.com/embed/2kA4yQK4k2w" title="Zoology Human Anatomy" allowfullscreen></iframe>
       </div>
       <div class="video-card">
-        <h4><i class="fas fa-play-circle"></i> Thermodynamics - Complete Guide</h4>
-        <iframe class="video-frame" src="https://www.youtube.com/embed/3QK4kQK4kQk" title="Chemistry Thermodynamics" allowfullscreen></iframe>
+        <h4><i class="fas fa-play-circle"></i> Genetics - Complete Guide</h4>
+        <iframe class="video-frame" src="https://www.youtube.com/embed/3QK4kQK4kQk" title="Zoology Genetics" allowfullscreen></iframe>
       </div>
     </div>
 
-    <h2><i class="fas fa-video"></i> 2nd Year Chemistry Video Lectures</h2>
-    <p>Master the advanced concepts of 2nd Year Chemistry with these comprehensive video lectures. These tutorials cover the complete syllabus as prescribed by the Board of Intermediate Education for MPC stream students.</p>
+    <h2><i class="fas fa-video"></i> 2nd Year Zoology Video Lectures</h2>
+    <p>Master the advanced concepts of 2nd Year Zoology with these comprehensive video lectures. These tutorials cover the complete syllabus as prescribed by the Board of Intermediate Education for BiPC stream students.</p>
     <div class="video-container">
       <div class="video-card">
-        <h4><i class="fas fa-play-circle"></i> Coordination Compounds - Full Chapter</h4>
-        <iframe class="video-frame" src="https://www.youtube.com/embed/4QK4kQK4kQk" title="2nd Year Chemistry: Coordination Compounds" allowfullscreen></iframe>
+        <h4><i class="fas fa-play-circle"></i> Human Physiology - Full Chapter</h4>
+        <iframe class="video-frame" src="https://www.youtube.com/embed/4QK4kQK4kQk" title="2nd Year Zoology: Human Physiology" allowfullscreen></iframe>
         <div class="video-desc" style="padding: 10px; font-size: 0.9rem; color: var(--text-light);">
-          <p><i class="fas fa-check-circle"></i> Covers structure, bonding, and applications</p>
+          <p><i class="fas fa-check-circle"></i> Covers digestive, nervous, and reproductive systems</p>
         </div>
       </div>
       <div class="video-card">
-        <h4><i class="fas fa-play-circle"></i> Biomolecules - Important Concepts</h4>
-        <iframe class="video-frame" src="https://www.youtube.com/embed/5QK4kQK4kQk" title="2nd Year Chemistry: Biomolecules" allowfullscreen></iframe>
+        <h4><i class="fas fa-play-circle"></i> Molecular Biology - Important Concepts</h4>
+        <iframe class="video-frame" src="https://www.youtube.com/embed/5QK4kQK4kQk" title="2nd Year Zoology: Molecular Biology" allowfullscreen></iframe>
         <div class="video-desc" style="padding: 10px; font-size: 0.9rem; color: var(--text-light);">
-          <p><i class="fas fa-check-circle"></i> Focus on carbohydrates, proteins, and nucleic acids</p>
+          <p><i class="fas fa-check-circle"></i> Focus on DNA replication and protein synthesis</p>
         </div>
       </div>
       <div class="video-card">
-        <h4><i class="fas fa-play-circle"></i> Electrochemistry</h4>
-        <iframe class="video-frame" src="https://www.youtube.com/embed/6QK4kQK4kQk" title="2nd Year Chemistry: Electrochemistry" allowfullscreen></iframe>
+        <h4><i class="fas fa-play-circle"></i> Evolution Theories</h4>
+        <iframe class="video-frame" src="https://www.youtube.com/embed/6QK4kQK4kQk" title="2nd Year Zoology: Evolution" allowfullscreen></iframe>
         <div class="video-desc" style="padding: 10px; font-size: 0.9rem; color: var(--text-light);">
-          <p><i class="fas fa-star"></i> Complete guide to electrochemical cells and applications</p>
+          <p><i class="fas fa-star"></i> Complete guide to Darwinism and modern synthesis</p>
         </div>
       </div>
     </div>
 
     <div class="coming-soon">
-      <i class="fas fa-bullhorn"></i> More video lectures and campus tour videos coming soon!
+      <i class="fas fa-bullhorn"></i> More video lectures and dissection videos coming soon!
     </div>
 
     <h2><i class="fas fa-lightbulb"></i> Exam Preparation Tips</h2>
@@ -396,27 +396,27 @@
       <div class="tip-item">
         <div class="tip-icon"><i class="fas fa-check-circle"></i></div>
         <div>
-          <h3>Understand Concepts</h3>
-          <p>Focus on understanding the logic behind chemical reactions and mechanisms. Chemistry is conceptual and application-based.</p>
+          <h3>Understand Diagrams</h3>
+          <p>Focus on drawing and labeling anatomical diagrams accurately. Practice important diagrams like heart, brain, and reproductive systems.</p>
         </div>
       </div>
       <div class="tip-item">
         <div class="tip-icon"><i class="fas fa-check-circle"></i></div>
         <div>
-          <h3>Practice Equations</h3>
-          <p>Write and balance chemical equations regularly. Practice conversions and calculations for numericals.</p>
+          <h3>Memorize Terminology</h3>
+          <p>Learn scientific names and biological terms. Create flashcards for quick revision of important terms and definitions.</p>
         </div>
       </div>
       <div class="tip-item">
         <div class="tip-icon"><i class="fas fa-check-circle"></i></div>
         <div>
-          <h3>Revise Periodically</h3>
-          <p>Revise key concepts, formulas, and named reactions. Make summary notes for last-minute revision.</p>
+          <h3>Focus on Physiology</h3>
+          <p>Understand physiological processes thoroughly. Relate concepts to real-life examples for better retention.</p>
         </div>
       </div>
     </div>
 
-    <h2><i class="fas fa-clipboard-list"></i> Chemistry Exam Pattern</h2>
+    <h2><i class="fas fa-clipboard-list"></i> Zoology Exam Pattern</h2>
     <table>
       <thead>
         <tr>
@@ -450,15 +450,15 @@
     </table>
 
     <h2><i class="fas fa-trophy"></i> Competitive Exam Preparation</h2>
-    <p>Chemistry syllabus covers a major portion of EAMCET/JEE Main Chemistry. Focus on these key topics for competitive exams:</p>
+    <p>Zoology syllabus covers a major portion of NEET Biology. Focus on these key topics for medical entrance exams:</p>
     <div class="exam-badges">
-      <div class="exam-badge"><i class="fas fa-flask"></i> Physical Chemistry</div>
-      <div class="exam-badge"><i class="fas fa-dna"></i> Organic Chemistry</div>
-      <div class="exam-badge"><i class="fas fa-atom"></i> Inorganic Chemistry</div>
-      <div class="exam-badge"><i class="fas fa-vial"></i> Chemical Bonding</div>
-      <div class="exam-badge"><i class="fas fa-burn"></i> Thermodynamics</div>
-      <div class="exam-badge"><i class="fas fa-charging-station"></i> Electrochemistry</div>
+      <div class="exam-badge"><i class="fas fa-brain"></i> Human Physiology</div>
+      <div class="exam-badge"><i class="fas fa-dna"></i> Genetics</div>
+      <div class="exam-badge"><i class="fas fa-paw"></i> Animal Diversity</div>
+      <div class="exam-badge"><i class="fas fa-leaf"></i> Ecology</div>
+      <div class="exam-badge"><i class="fas fa-history"></i> Evolution</div>
+      <div class="exam-badge"><i class="fas fa-microscope"></i> Cell Biology</div>
     </div>
   </div>
 </body>
-</html> 
+</html>
